--- a/index.html
+++ b/index.html
@@ -3,13 +3,80 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mini-jeu </title>
-  <link href="./assets/css/style.css" rel="stylesheet">
+  <title>Guerre des Étoiles - Accueil</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  <style>
+    /* --- Fond spatial animé --- */
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      /* background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%); */
+      overflow: hidden;
+      color: #fff;
+      font-family: 'Orbitron', sans-serif;
+      text-align: center;
+    }
+
+    /* Étoiles animées */
+    @keyframes moveStars {
+      from { transform: translateY(0); }
+      to { transform: translateY(-1000px); }
+    }
+
+    .stars {
+      position: absolute;
+      width: 2px;
+      height: 2px;
+      background: white;
+      box-shadow: 
+        100px 200px white, 200px 300px white, 400px 600px white,
+        200px 400px white, 300px 400px white, 500px 700px white,
+        500px 700px white, 800px 100px white, 900px 400px white,
+        300px 500px white, 700px 800px white, 1200px 600px white;
+      animation: moveStars 20s linear infinite;
+    }
+
+    h1 {
+      font-size: 3rem;
+      letter-spacing: 2px;
+      text-shadow: 0 0 15px #0ff;
+    }
+
+    h2 {
+      font-size: 1.5rem;
+      margin-bottom: 30px;
+      color: #b8e8ff;
+    }
+
+
+
+    footer {
+      position: absolute;
+      bottom: 10px;
+      font-size: 0.9rem;
+      color: #aaa;
+    }
+  </style>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- 🎮 Zone de jeu -->
-  <canvas id="gameCanvas" width="800" height="600"></canvas>
 
+  <div class="stars"></div>
+
+  <h1>Guerre des Étoiles</h1>
+  <h2>Choisissez votre aventure</h2>
+
+  <div>
+    <a href="/lesson-2.html" class="btn-game">🚀 Shooter Game</a>
+    <a href="/lesson-3.html" class="btn-game">⭐ Collect Star</a>
+  </div>
+
+  <footer>© 2025 Star Collector - Développé avec Phaser.js</footer>
 
 </body>
 </html>
