--- a/lesson-3.html
+++ b/lesson-3.html
@@ -12,7 +12,7 @@
 
   <div id="game-content">
     <div class="wrapper-game">
-        <h1 class="title">🚀 Space Shooter 🌌</h1>
+        <h1 class="title">Collect Star</h1>
         <div class="btn-container">
           <a href="/" class="btn-back">Retour</a>
           <button id="startBtn">Démarrer</button>
