--- a/lesson-3.html
+++ b/lesson-3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mini Pacman - Phaser 3</title>
+  <title> Collect Star - Phaser 3</title>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.js"></script>
   <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
